[hotfix] Fixed player details horizontal spacing

--- a/src/components/players/list/index.module.scss
+++ b/src/components/players/list/index.module.scss
@@ -61,7 +61,9 @@
     }
 
     .number {
-      width: 60px;
+      min-width: 55px;
+      max-width: 65px;
+      flex: 0.5 1;
       border-radius: 5px;
       color: $grey3;
       font-size: 28px;
